--- a/style.css
+++ b/style.css
@@ -38,15 +38,24 @@ main {
     background-color: var(--primary-color);
     color: var(--secondary-color);
     position: relative;
-    border-bottom-left-radius : 1rem;
-    border-bottom-right-radius : 1rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 
 .navigation h1 {
     text-align: center;
     padding: 1rem;
     font-size: 2.5rem;
-    /* margin: 0 1rem; */
+}
+
+.navigation h1 img {
+    max-width: 70px;
+    border-radius: 1rem;
+    border-radius: 2rem;
+    position: absolute;
+    top: 10px;
+    right: 50;
+    right: 270px;
 }
 
 #input {
@@ -89,8 +98,8 @@ main {
     text-align: center;
     background-color: var(--primary-color);
     position: relative;
-    border-top-left-radius : 1rem;
-    border-top-right-radius : 1rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
 }
 
 .social-links {
